2010-06-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* doctools.tcl: Extended the plugin API to the image map to
	* mpformats/fmt.nroff: allow querying the image data instead of
	* mpformats/fmt.wiki: its paths. Fixed the nroff, wiki, and text
	* mpformats/fmt.text: plugins to use this new command, as they
	* doctools_plugin_apiref.man: are in a restricted environment
	* doctools.man: which does not allow them to 'open' files on their
	* pkgIndex.tcl: own. Documented the command now. nroff further
	  extended to accept .txt images as well as .pic, and do a bit of
	  formatting of their own to make them fit (.nf/.fi). Version
	  bumped to 1.4.8.

	* ../../apps/dtplite: Fixes for problems with the handling of
	  relative paths. Version bumped to 1.0.2.

2010-06-08  Andreas Kupries  <andreask@activestate.com>

	* ../../apps/dtplite: Fix the min version requirements.

	* checker.tcl: Added 'image' command to doctools, and the
	* doctools.man: various backends. Bumped to version 1.4.7.
	* doctools_lang_cmdref.man: Images are specified through
	* doctools.tcl: symbolic name. Tools like dtp(lite) specify
	* pkgIndex.tcl: possible mappings, and the backends select
	* mpformats/fmt.html: a proper variant (png, jpeg, text, ...)
	* mpformats/fmt.latex: or fallback to a 'here should be this
	* mpformats/fmt.nroff: image' markup, if no proper variant
	* mpformats/fmt.null: for them was found.
	* mpformats/fmt.wiki:
	* mpformats/fmt.text: Future/Todo - Recognize uris as symbolic
	* mpformats/_html.tcl: name and treat as external reference.
	* ../../apps/dtplite:

	* docidx.man: Added missing dt_package and restricted 'file'
	* docidx.tcl: support to doctool::toc and doctools::idx. Versions
	* doctoc.man: bumped to 1.1.3 and 1.0.4.
	* doctoc.tcl: 
	* pkgIndex.tcl: 

	* mpformats/toc.text: Fixed command names using various textutil
	* mpformats/idx.text: functionality.

2010-02-05  Andreas Kupries  <andreask@activestate.com>
