@@ -248,9 +248,10 @@ proc fmt_image {text {label {}}} {
 	return \n.PS\n.nf\n$img\n.fi\n.PE\n
     }
     if {$label eq {}} {
-	set label $text
+	return "IMAGE: $text"
+    } else {
+	return "IMAGE: $text $label"
     }
-    return "IMAGE: $label"
 }
 proc fmt_term    {text} {underline $text}
 proc fmt_const   {text} {bold $text}
